<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="kim.uno.simpleapp.ui.document.DocumentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.document.DocumentFragment">

        <FrameLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/favorite"
            isSelected="@{viewModel.favorite}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/selector_favorite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </FrameLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="@{`container` + viewModel.item.hashCode()}">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:background="@color/image"
                    android:foreground="@drawable/ripple"
                    android:scaleType="centerCrop"
                    android:transitionName="@{`thumbnail` + viewModel.item.hashCode()}"
                    app:layout_constraintDimensionRatio="120:174"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            textFuture="@{viewModel.item.title}"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            textFuture="@{viewModel.item.formattedDate}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/price"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        textFuture="@{viewModel.item.formattedPrice}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />

                    <TextView
                        android:id="@+id/author"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        textFuture="@{viewModel.item.author}"
                        visibleByText="@{viewModel.item.author}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />

                    <TextView
                        android:id="@+id/contents"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        textFuture="@{viewModel.item.contents}"
                        visibleByText="@{viewModel.item.contents}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progress"
            isVisible="@{viewModel.progress}"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>