...
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchFragment">

        <EditText
            android:id="@+id/search"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
...
